# coreui

./: .gitignore  CMakeLists.txt  README.md  button.cpp  button.h  main.cpp  text.cpp  text.h  view.cpp  view.h  window.cpp  window.h
TestScope/: main.cpp  properties.hpp  text.cpp  text.hpp  window.hpp
TestScope.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
TestScope.xcodeproj/project.xcworkspace/xcuserdata/george.xcuserdatad/: UserInterfaceState.xcuserstate
TestScope.xcodeproj/xcuserdata/george.xcuserdatad/xcschemes/: xcschememanagement.plist
framework_tests/TestScope/: properties.cpp  view.cpp  view.hpp  window.cpp  window.hpp
framework_tests/TestScope.xcodeproj/: project.pbxproj
framework_tests/TestScope.xcodeproj/project.xcworkspace/xcuserdata/george.xcuserdatad/: UserInterfaceState.xcuserstate
platform/macOS/: native_window.h  native_window.mm  native_window_interface.h
